library/src/libqevent.h

typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QIconDragEvent QIconDragEvent;
typedef struct QInputDevice QInputDevice;
typedef struct QInputEvent QInputEvent;
typedef struct QPlatformSurfaceEvent QPlatformSurfaceEvent;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef QContextMenuEvent::Reason Reason;                         // C++ enum
typedef QPlatformSurfaceEvent::SurfaceEventType SurfaceEventType; // C++ enum
typedef int Reason;              // C ABI enum
typedef int SurfaceEventType;    // C ABI enum
QTLIBC_API QInputDevice* QInputEvent_Device(const QInputEvent* self);
QTLIBC_API int QInputEvent_DeviceType(const QInputEvent* self);
QTLIBC_API QPlatformSurfaceEvent* QPlatformSurfaceEvent_new(int surfaceEventType);
QTLIBC_API QPlatformSurfaceEvent* QPlatformSurfaceEvent_Clone(const QPlatformSurfaceEvent* self);
QTLIBC_API int QPlatformSurfaceEvent_SurfaceEventType(const QPlatformSurfaceEvent* self);
QTLIBC_API void QPlatformSurfaceEvent_Delete(QPlatformSurfaceEvent* self);
QTLIBC_API QResizeEvent* QResizeEvent_new(QSize* size, QSize* oldSize);
QTLIBC_API QResizeEvent* QResizeEvent_Clone(const QResizeEvent* self);
QTLIBC_API QSize* QResizeEvent_Size(const QResizeEvent* self);
QTLIBC_API QSize* QResizeEvent_OldSize(const QResizeEvent* self);
QTLIBC_API void QResizeEvent_Delete(QResizeEvent* self);
QTLIBC_API QCloseEvent* QCloseEvent_new();
QTLIBC_API QCloseEvent* QCloseEvent_Clone(const QCloseEvent* self);
QTLIBC_API void QCloseEvent_Delete(QCloseEvent* self);
QTLIBC_API QIconDragEvent* QIconDragEvent_new();
QTLIBC_API QIconDragEvent* QIconDragEvent_Clone(const QIconDragEvent* self);
QTLIBC_API void QIconDragEvent_Delete(QIconDragEvent* self);
QTLIBC_API QShowEvent* QShowEvent_new();
QTLIBC_API QShowEvent* QShowEvent_Clone(const QShowEvent* self);
QTLIBC_API void QShowEvent_Delete(QShowEvent* self);
QTLIBC_API QHideEvent* QHideEvent_new();
QTLIBC_API QHideEvent* QHideEvent_Clone(const QHideEvent* self);
QTLIBC_API void QHideEvent_Delete(QHideEvent* self);
QTLIBC_API QContextMenuEvent* QContextMenuEvent_new(int reason, QPoint* pos, QPoint* globalPos);
QTLIBC_API QContextMenuEvent* QContextMenuEvent_Clone(const QContextMenuEvent* self);
QTLIBC_API int QContextMenuEvent_X(const QContextMenuEvent* self);
QTLIBC_API int QContextMenuEvent_Y(const QContextMenuEvent* self);
QTLIBC_API int QContextMenuEvent_GlobalX(const QContextMenuEvent* self);
QTLIBC_API int QContextMenuEvent_GlobalY(const QContextMenuEvent* self);
QTLIBC_API QPoint* QContextMenuEvent_Pos(const QContextMenuEvent* self);
QTLIBC_API QPoint* QContextMenuEvent_GlobalPos(const QContextMenuEvent* self);
QTLIBC_API int QContextMenuEvent_Reason(const QContextMenuEvent* self);
QTLIBC_API void QContextMenuEvent_Delete(QContextMenuEvent* self);