src/qt/libqevent.bf

	
	public virtual void* Clone()
	{
		return CQt.QPlatformSurfaceEvent_Clone(this.nativePtr);
	}
	
	public int64 SurfaceEventType()
	{
		return CQt.QPlatformSurfaceEvent_SurfaceEventType(this.nativePtr);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QPlatformSurfaceEvent_new")]
	public static extern void* QPlatformSurfaceEvent_new(int64 surfaceEventType);
	[LinkName("QPlatformSurfaceEvent_Clone")]
	public static extern void* QPlatformSurfaceEvent_Clone(void* c_this);
	[LinkName("QPlatformSurfaceEvent_SurfaceEventType")]
	public static extern int64 QPlatformSurfaceEvent_SurfaceEventType(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QPlatformSurfaceEvent_Delete")]
	public static extern void QPlatformSurfaceEvent_Delete(void* self);
}
public interface IQResizeEvent
{
	void* NativePtr { get; }
}
public class QResizeEvent : IQResizeEvent, IQEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(IQSize size, IQSize oldSize)
	{
		this.nativePtr = CQt.QResizeEvent_new((size == default) ? default : (void*)size.NativePtr, (oldSize == default) ? default : (void*)oldSize.NativePtr);
	}
	
	public ~this()
	{
		CQt.QResizeEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QResizeEvent_Clone(this.nativePtr);
	}
	
	public void* Size()
	{
		return CQt.QResizeEvent_Size(this.nativePtr);
	}
	
	public void* OldSize()
	{
		return CQt.QResizeEvent_OldSize(this.nativePtr);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QResizeEvent_new")]
	public static extern void* QResizeEvent_new(void* size, void* oldSize);
	[LinkName("QResizeEvent_Clone")]
	public static extern void* QResizeEvent_Clone(void* c_this);
	[LinkName("QResizeEvent_Size")]
	public static extern void* QResizeEvent_Size(void* c_this);
	[LinkName("QResizeEvent_OldSize")]
	public static extern void* QResizeEvent_OldSize(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QResizeEvent_Delete")]
	public static extern void QResizeEvent_Delete(void* self);
}
public interface IQCloseEvent
{
	void* NativePtr { get; }
}
public class QCloseEvent : IQCloseEvent, IQEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QCloseEvent_new();
	}
	
	public ~this()
	{
		CQt.QCloseEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QCloseEvent_Clone(this.nativePtr);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QCloseEvent_new")]
	public static extern void* QCloseEvent_new();
	[LinkName("QCloseEvent_Clone")]
	public static extern void* QCloseEvent_Clone(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QCloseEvent_Delete")]
	public static extern void QCloseEvent_Delete(void* self);
}
public interface IQIconDragEvent
{
	void* NativePtr { get; }
}
public class QIconDragEvent : IQIconDragEvent, IQEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QIconDragEvent_new();
	}
	
	public ~this()
	{
		CQt.QIconDragEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QIconDragEvent_Clone(this.nativePtr);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QIconDragEvent_new")]
	public static extern void* QIconDragEvent_new();
	[LinkName("QIconDragEvent_Clone")]
	public static extern void* QIconDragEvent_Clone(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QIconDragEvent_Delete")]
	public static extern void QIconDragEvent_Delete(void* self);
}
public interface IQShowEvent
{
	void* NativePtr { get; }
}
public class QShowEvent : IQShowEvent, IQEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QShowEvent_new();
	}
	
	public ~this()
	{
		CQt.QShowEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QShowEvent_Clone(this.nativePtr);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QShowEvent_new")]
	public static extern void* QShowEvent_new();
	[LinkName("QShowEvent_Clone")]
	public static extern void* QShowEvent_Clone(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QShowEvent_Delete")]
	public static extern void QShowEvent_Delete(void* self);
}
public interface IQHideEvent
{
	void* NativePtr { get; }
}
public class QHideEvent : IQHideEvent, IQEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QHideEvent_new();
	}
	
	public ~this()
	{
		CQt.QHideEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QHideEvent_Clone(this.nativePtr);
	}
	
	public int64 Type()
	{
		return CQt.QEvent_Type(this.nativePtr);
	}
	
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous(this.nativePtr);
	}
	
	public virtual void SetAccepted(bool accepted)
	{
		CQt.QEvent_SetAccepted(this.nativePtr, accepted);
	}
	
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted(this.nativePtr);
	}
	
	public void Accept()
	{
		CQt.QEvent_Accept(this.nativePtr);
	}
	
	public void Ignore()
	{
		CQt.QEvent_Ignore(this.nativePtr);
	}
	
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent(this.nativePtr);
	}
	
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent(this.nativePtr);
	}
	
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent(this.nativePtr);
	}
	
	public static int32 RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	
	public static int32 RegisterEventType1(int32 hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
	
}
extension CQt
{
	[LinkName("QHideEvent_new")]
	public static extern void* QHideEvent_new();
	[LinkName("QHideEvent_Clone")]
	public static extern void* QHideEvent_Clone(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QHideEvent_Delete")]
	public static extern void QHideEvent_Delete(void* self);
}
public interface IQContextMenuEvent
{
	void* NativePtr { get; }
}
public class QContextMenuEvent : IQContextMenuEvent, IQInputEvent
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(int64 reason, IQPoint pos, IQPoint globalPos)
	{
		this.nativePtr = CQt.QContextMenuEvent_new(reason, (pos == default) ? default : (void*)pos.NativePtr, (globalPos == default) ? default : (void*)globalPos.NativePtr);
	}
	
	public ~this()
	{
		CQt.QContextMenuEvent_Delete(this.nativePtr);
	}
	
	public virtual void* Clone()
	{
		return CQt.QContextMenuEvent_Clone(this.nativePtr);
	}
	
	public int32 X()
	{
		return CQt.QContextMenuEvent_X(this.nativePtr);
	}
	
	public int32 Y()
	{
		return CQt.QContextMenuEvent_Y(this.nativePtr);
	}
	
	public int32 GlobalX()
	{
		return CQt.QContextMenuEvent_GlobalX(this.nativePtr);
	}
	
	public int32 GlobalY()
	{
		return CQt.QContextMenuEvent_GlobalY(this.nativePtr);
	}
	
	public void* Pos()
	{
		return CQt.QContextMenuEvent_Pos(this.nativePtr);
	}
	
	public void* GlobalPos()
	{
		return CQt.QContextMenuEvent_GlobalPos(this.nativePtr);
	}
	
	public int64 Reason()
	{
		return CQt.QContextMenuEvent_Reason(this.nativePtr);
	}
	
	public void* Device()
	{
		return CQt.QInputEvent_Device(this.nativePtr);
	}
	
	public int64 DeviceType()
	{
		return CQt.QInputEvent_DeviceType(this.nativePtr);
	}
